--- a/_texts.scss
+++ b/_texts.scss
@@ -121,5 +121,6 @@
     text-transform: uppercase;
     font-size: var(--font-md-2);
     font-family: Waruna, sans-serif;
-    
+    letter-spacing: 1px;
+    font-weight: 500;
 }
